--- a/pages/bidding/bidding.wxss
+++ b/pages/bidding/bidding.wxss
@@ -1,1 +1,34 @@
 /* pages/bidding/bidding.wxss */
+.movie-container{
+  display: flex;
+  flex-direction: column;
+}
+.navbar{
+  display: flex;
+  position: absolute;
+  left: 0;
+  top: 72px;
+  z-index: 500;
+  width: 100%;
+  height: 50px;
+  flex-direction: row;
+  text-align: center;
+  color: #A8A8A8;
+  font-size: 15px;
+  box-sizing: border-box;
+  background-color: #FFF;
+}
+.navbar-item{
+  flex: 1;
+  padding: 26rpx 0px;
+  margin: 0 80rpx;
+}
+.navbar-item-active{
+  /* transition: all 0.3s; */
+  border-bottom: 5rpx solid #2a7dfd;
+  color: #2a7dfd;
+}
+
+.movie-content-wrapper{
+  padding-top: 50px;
+}
